--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>My Repo</h1> 
+   <h1>My Repo</h1>
+   <h2>my name  is hafsa</h2> 
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quae neque consectetur placeat? Minus, mollitia atque officia voluptates perferendis esse aliquam consequatur quae, molestias optio ipsa vero et sunt ullam numquam! Porro a consectetur labore perferendis nisi incidunt cum doloribus!</p>
 </body>
 </html>
